<resources>
    <string name="app_name">Hanging Messages</string>

    <!-- Geo Fence Creator view lables -->
    <string name="hint_search">Search</string>
    <string name="circular_geofence">Circular</string>
    <string name="polygonal_geofence">Polygonal</string>
    <string name="area_wise">Custom area</string>
    <string name="circular_geofence_radius">Radius (in meters)</string>
    <string name="admin_area">Admin area</string>


    <!-- Edit message view labels -->
    <string name="from">From</string>
    <string name="to">Receivers</string>
    <string name="subject">Subject</string>

    <string name="message_type">Message Type</string>
    <string name="msg_type_information">Information</string>
    <string name="msg_type_advertise">Advertisement</string>
    <string name="msg_type_instruction">Instruction</string>
    <string name="msg_type_warning">Warning</string>

    <string name="priority_type">Priority</string>
    <string name="msg_priority_low">Low</string>
    <string name="msg_priority_medium">Medium</string>
    <string name="msg_priority_high">High</string>

    <string name="valid_from_time">Valid from</string>
    <string name="valid_to_time">Valid to</string>

    <string name="valid_for">Valid for</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>

    <string name="message">Message</string>

    <string-array name="msg_valid_for_days_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="msg_valid_for_hours_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

</resources>
