<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_message_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    android:columnCount="5"
    android:padding="10dp"
    android:rowCount="8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/from"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message_from_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/to"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message_to_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/subject"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message_subject_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnSpan="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/message_type"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/message_types_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_columnSpan="4"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/msg_type_info_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onMessageTypeSelected"
            android:text="@string/msg_type_information" />

        <RadioButton
            android:id="@+id/msg_type_advt_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onMessageTypeSelected"
            android:text="@string/msg_type_advertise" />

        <RadioButton
            android:id="@+id/msg_type_instr_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onMessageTypeSelected"
            android:text="@string/msg_type_instruction" />

        <RadioButton
            android:id="@+id/msg_type_warn_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onMessageTypeSelected"
            android:text="@string/msg_type_warning" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/priority_type"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/message_priorities_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_columnSpan="4"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/msg_priority_low_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onPriorityTypeSelected"
            android:text="@string/msg_priority_low" />

        <RadioButton
            android:id="@+id/msg_priority_medium_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPriorityTypeSelected"
            android:text="@string/msg_priority_medium" />

        <RadioButton
            android:id="@+id/msg_priority_high_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPriorityTypeSelected"
            android:text="@string/msg_priority_high" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/valid_from_time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_valid_from_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1" />

    <ImageButton
        android:id="@+id/message_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:onClick="pickDate"
        android:src="@drawable/ic_date_picker" />

    <TextView
        android:id="@+id/message_valid_from_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="3" />

    <ImageButton
        android:id="@+id/message_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="4"
        android:onClick="pickTime"
        android:src="@drawable/ic_reminder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/valid_for"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/msg_valid_for_days_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:text="@string/days" />

    <Spinner
        android:id="@+id/msg_valid_for_hours_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="4"
        android:text="@string/hours" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/message"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message_text_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_columnSpan="4"
        android:inputType="textMultiLine"
        android:lines="3"
        android:scrollHorizontally="false" />

</GridLayout>