<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GeoFenceCreatorActivity">

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hint_search"
        android:imeOptions="actionSearch"
        android:inputType="text" />

    <ListView
        android:id="@+id/search_results_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@android:color/white"
        android:choiceMode="singleChoice" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.tomtom.online.sdk.map.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/geofence_selections_rg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/circular_geofence_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/circular_geofence" />

        <RadioButton
            android:id="@+id/polygonal_geofence_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/polygonal_geofence" />

        <RadioButton
            android:id="@+id/by_area_geofence_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/area_wise" />

        <RadioButton
            android:id="@+id/by_admin_area_geofence_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/admin_area" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/circular_geofence_radius" />

        <TextView
            android:id="@+id/circular_geofence_radius_tv"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="match_parent" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/adjust_cir_geofence_radius_sb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/go_back_ib"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="clickBack"
            android:src="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/go_next_ib"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="clickNext"
            android:src="@drawable/ic_next" />
    </LinearLayout>

</LinearLayout>
