<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_message_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/blue_gradient"
    android:orientation="vertical"
    android:padding="20dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/from"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_from_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/to"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_to_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="10dp"
            android:text="@string/subject"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_subject_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:padding="10dp"
            android:textSize="15sp" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/message_type_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_type_info" />

        <ImageView
            android:id="@+id/priority_type_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_prio_high" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/valid_from_time"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_valid_from_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="10sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/valid_to_time"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_valid_to_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/message_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollHorizontally="false"
        android:textSize="30sp" />

</LinearLayout>